--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,6 +5,7 @@ on:
     workflows: ["Update calendar on push"]  # 依赖的 workflow 名称
     types:
       - completed  # 或 success，如果只在成功时触发
+  workflow_dispatch: # 手动触发
 
 permissions:
   contents: write
