--- a/.github/workflows/push_wp.yml
+++ b/.github/workflows/push_wp.yml
@@ -41,9 +41,12 @@ jobs:
           python scripts/update_calendar_on_push.py
 
       - name: Commit & Push
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add docs/data/calendar.json
           git diff --cached --quiet || git commit -m "Update calendar from PR merge"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}
+          git push origin HEAD:main
