test for no added files

--- a/.github/workflows/push_wp.yml
+++ b/.github/workflows/push_wp.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: CTF-USTB/Panic404-wp
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -48,5 +51,4 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add docs/data/calendar.json
           git diff --cached --quiet || git commit -m "Update calendar from PR merge"
-          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}
-          git push origin HEAD:main
+          git push
