--- a/.github/workflows/push_wp.yml
+++ b/.github/workflows/push_wp.yml
@@ -1,7 +1,7 @@
 name: Update calendar on PR Merged
 
 on:
-  pull_request:
+  pull_request_target: # 保证可以使用 secrets
     types: [closed]
     paths:
       - 'docs/**'
@@ -11,11 +11,11 @@ permissions:
 
 jobs:
   update:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: CTF-USTB/Panic404-wp
           token: ${{ secrets.PAT_TOKEN }}
 
       - name: Setup Python
@@ -44,8 +44,6 @@ jobs:
           python scripts/update_calendar_on_push.py
 
       - name: Commit & Push
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
